<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/UL_Logo"
        android:layout_width="343dp"
        android:layout_height="365dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ul_logo" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:clickable="false"
        android:contentDescription="@string/string"
        android:text="@string/take_photo"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/locationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UL_Logo" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/quit"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationButton" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="369dp"
        android:fontFamily="@font/gilda_display"
        android:text="@string/building_recognition_app"
        android:textAlignment="center"
        android:textColor="@color/appTitleColor"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/UL_Logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/UL_Logo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/locations"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoButton" />

</android.support.constraint.ConstraintLayout>